// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Share Matches snapshot 1`] = `
<div
  class="mod-share  "
  id="v-share"
>
  <div
    class="container --left"
  >
    <button
      class="com-button   --icon "
      title="Facebook"
      type="button"
    >
      <i
        class="com-icon icon-facebook-filled   "
      />
    </button>
    <button
      class="com-button   --icon "
      title="Twitter"
      type="button"
    >
      <i
        class="com-icon icon-twitter-filled   "
      />
    </button>
    <button
      class="com-button   --icon "
      title="WhatsApp"
      type="button"
    >
      <i
        class="com-icon icon-whatsapp-filled   "
      />
    </button>
  </div>
  <div
    class="com-line  "
  />
  <div
    class="container --right"
  >
    <button
      class="com-button   --icon "
      title="E-mail"
      type="button"
    >
      <i
        class="com-icon icon-email   "
      />
    </button>
    <button
      class="com-button   --icon comment "
      title="Comentar"
      type="button"
    >
      <i
        class="com-icon icon-comment   "
      />
      <span
        class="com-text --fourxs "
      >
        <label
          class="livefyre-commentcount"
          data-lf-article-id="JZQDUAOPSRF3LLDZOT6374IDOM"
          id="livefyre-commentcount"
        >
          0
        </label>
      </span>
    </button>
  </div>
</div>
`;

exports[`Share Note display comment in false  Matches snapshot 1`] = `
<div
  class="mod-share  "
  id="v-share"
>
  <div
    class="container --left"
  >
    <button
      class="com-button   --icon "
      title="Facebook"
      type="button"
    >
      <i
        class="com-icon icon-facebook-filled   "
      />
    </button>
    <button
      class="com-button   --icon "
      title="Twitter"
      type="button"
    >
      <i
        class="com-icon icon-twitter-filled   "
      />
    </button>
    <button
      class="com-button   --icon "
      title="WhatsApp"
      type="button"
    >
      <i
        class="com-icon icon-whatsapp-filled   "
      />
    </button>
  </div>
  <div
    class="com-line  "
  />
  <div
    class="container --right"
  >
    <button
      class="com-button   --icon "
      title="E-mail"
      type="button"
    >
      <i
        class="com-icon icon-email   "
      />
    </button>
  </div>
</div>
`;
